adding more places
adding more places to visit

--- a/src/components/Tour/Tour.scss
+++ b/src/components/Tour/Tour.scss
@@ -57,4 +57,16 @@
       cursor: pointer;
     }
   }
+
+
+  h6 {
+    text-align: center;
+  }
+
+  
+}
+
+.stars {
+  color: #fff;
+  vertical-align: middle;
 }
